css for shimmer UI

--- a/Coding_Assignments/styles/styles.css
+++ b/Coding_Assignments/styles/styles.css
@@ -210,3 +210,16 @@ footer h3 {
   border: none;
   cursor: pointer;
 } 
+
+/* -----------For Shimmer UI  ---------- */
+.restaurant-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  width: 200px;
+  height: 200px;
+  background: lightgrey;
+  margin: 20px;
+}
