--- a/Coding_Assignments/styles/styles.css
+++ b/Coding_Assignments/styles/styles.css
@@ -328,7 +328,7 @@ body {
 .menu-description-container {
   margin: 2rem auto;
   max-width: 800px;
-  background-color: white;
+  background-color: #FFFAE3;
   padding: 2rem;
 }
 
