Add Login Logout Toggle

--- a/Coding_Assignments/styles/styles.css
+++ b/Coding_Assignments/styles/styles.css
@@ -453,3 +453,17 @@ img {
 
 
 /*-------------Shopping Cart closes-----------------------------*/
+
+
+
+/*------------Implementing Dark and Light Mode  ---------------------------*/
+.dark {
+  background-color: black;
+  color: white;
+}
+
+.light {
+  background-color: orangered;
+  color: #222;
+}
+
